dotNET/AspWithSessionOnMultipleNodes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deploy
  labels:
    app: web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      terminationGracePeriodSeconds: 1
      containers:
      - name: test-session-pod
        image: queryinterface/aspnetapp
        imagePullPolicy: Always
        ports:
        - containerPort: 80
